deployments/server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
    nodeName: ip-10-0-3-177.ec2.internal 
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
